# rn-turbo-db

./: .gitignore  CHANGELOG.md  FEATURES_PENDING.md  README.md  ROADMAP.md  SecureDB.podspec  TurboDB.podspec  package-lock.json  package.json  tsconfig.json
android/: CMakeLists.txt  build.gradle
android/src/main/cpp/: SecureCryptoAndroid.cpp  SecureCryptoAndroid.h  SecureDBModule.cpp  TurboDBModule.cpp
android/src/main/cpp/include/sodium/: version.h
android/src/main/java/com/securedb/: KeyStoreManager.java  SecureDBModule.java  SecureDBPackage.java
android/src/main/java/com/turbodb/: TurboDBModule.java
cpp/: ArenaAllocator.h  AsyncCryptoContext.cpp  AsyncCryptoContext.h  BatchWALManager.cpp  BatchWALManager.h  BinarySerializer.cpp  BufferedBTree.cpp  BufferedBTree.h  CachedCryptoContext.cpp  CachedCryptoContext.h  Compactor.cpp  Compactor.h  DBEngine.cpp  DBEngine.h  LRUCache.cpp  LRUCache.h  MMapRegion.cpp  MMapRegion.h  MemoryView.cpp  MemoryView.h  PersistentBPlusTree.cpp  PersistentBPlusTree.h  ReadAheadBuffer.cpp  ReadAheadBuffer.h  SecureDBImpl.cpp  SyncMetadata.h  ThreadPool.cpp  ThreadPool.h  TurboDBImpl.h  WALManager.cpp  WALManager.h  WriteBuffer.cpp  WriteBuffer.h
example/: README.md
example/ios/: Podfile
example/ios/JSIStorageExample.xcodeproj/: project.pbxproj
example/ios/JSIStorageExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: KeyManagerIOS.h  KeyManagerIOS.mm  PlatformUtilsIOS.h  PlatformUtilsIOS.mm  SecureCryptoIOS.h  SecureCryptoIOS.mm  SecureDBImpl.mm  TurboDBImpl.mm
ios/folly/coro/: Coroutine.h
src/: NativeTurboDB.ts  SyncManager.ts  TurboDBError.ts  index.tsx  index.web.ts
src/__tests__/: SecureDB.test.ts  index.test.tsx
